decided to switch to SPA approach and on request load the IMDB and movie trailer below

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 	<title>Node Movie api</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="..\public\stylesheets\mainPage.css">
+	<link rel="stylesheet" href="..\public\stylesheets\main.css">
 
 	<body>
 		<div id="root"></div>
