--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 	<title>Node Movie api</title>
 
-	<link rel="stylesheet" href="..\public\stylesheets\bootstrap337.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="..\public\stylesheets\main.css">
 
 	<body>
